# ncm-el-extension

./: .gitignore  Cargo.toml  LICENSE  tokens.txt
ncmapi-rs/: Cargo.toml
ncmapi-rs/src/: api.rs  lib.rs
ncmapi-rs/src/client/: api_request.rs  mod.rs  route.rs
ncmapi-rs/src/types/: mod.rs
src/: api.rs  lib.rs
