[package]
name = "ncm-el-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "api"

[lib]
name = "netease_cloud_music_rust"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.18.0"
ncmapi = { path = "./ncmapi-rs/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
