[package]
name = "netease_cloud_music_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "api"
# path = "src/api.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = { version = "0.18.0", features = ["utf-8-validation"] }
ncmapi = { path = "./ncmapi-rs/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
